henrik@levkowetz.com Merged in [3876] from henrik@levkowetz.com:\n    Adjusted li > p margin to fit better with other list spacing, and to not let the <p> margin spill out from inside a <li>.  FIxes issue #580.  - Legacy-Id: 3900 Note: SVN reference [3876] has been migrated to Git commit 2a760b6df524e60330377476bfeff24f0e011fc6

--- a/cli/xml2rfc/data/xml2rfc.css
+++ b/cli/xml2rfc/data/xml2rfc.css
@@ -1124,3 +1124,11 @@ dd > ul:first-child {
 dt+dd:empty::before{
   content: "\00a0";
 }
+/* Make paragraph spacing inside <li> smaller than in body text, to fit better within the list */
+li > p {
+  margin-bottom: 0.5em
+}
+/* Don't let p margin spill out from inside list items */
+li > p:last-of-type {
+  margin-bottom: 0;
+}
